sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  {
  for(i<- 1 to list.size) {
    if(plusPetit(i, i+1)) {
      echange(i,i+1)
    }
  } 
}